SERVER-71796 [CQF] Make union cost commutative